2007-11-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/POTFILES.in, plugins/autosave.c, plugins/Makefile.am,
   plugins/makefile.win32: New plugin: Auto Save.
 * geany.glade, src/editor.c, src/interface.c:
   Enable Shift+click on a fold point to unfold all possibly folded
   children (same as the pref "Unfold all children of a fold point").


2007-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c: Fix crash when trying to add a multiline comment in
                 filetypes which don't support it.
 * src/symbols.c, src/treeviews.c, src/treeviews.h:
   Revert the change to make symbol sections bold and use some small
   indentation when expanders are hidden.
 * src/geanyobject.c, src/geanyobject.h, src/main.c, src/plugindata.h,
   src/plugins.c, src/project.c, src/project.h:
   Remove ununsed function project_save().
   Fix typo in plugin API at utils_mkdir().
   Add document_get_n_idx() to the plugin API.
   Fix display of plugin separator in the Tools menu when only plugins
   without menu item are loaded.
   Add three new signals: project_open, project_save, project_close.
   On Shutdown close the project before plugins are unloaded to let
   plugins work on the last project closed event.


2007-11-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, plugins/*.c src/callbacks.c, src/callbacks.h,
   src/geany.h, src/interface.c, src/keyfile.c, src/main.c,
   src/plugindata.h, src/plugins.c, src/plugins.h:
   Add plugin manager dialog to select plugins to load at startup and
   to call a plugin configure dialog.
   Add configure symbol for plugins which is called by Geany when a
   configure dialog for the plugin is requested, optionally.
   Add author field to plugin info struct.
   Add sample configure dialog to the demo plugin.
   Fix cleanup code in filebrowser plugin to remove it completely when
   unloaded.
 * src/plugindata.h, src/plugins.c: Add utils_mkdir() to the plugin API.

