@@ -1,3 +1,11 @@
+2007-11-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/symbols.c, tagmanager/basic.c:
+   Use FreeBasic specific sections in symbol list.
+   Use Basic parser from CTags SVN and improve the parser for better
+   handling of dim and const keywords.
+
+
 2007-11-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * po/POTFILES.in, plugins/autosave.c, plugins/Makefile.am,
